--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -1,6 +1,14 @@
 name: Build FreyjaBeta APK (Release firmado)
 on:
+ name: Build Freyja Beta
+
+on:
   workflow_dispatch:
+  push:
+    branches: [ main ]
+
+permissions:
+  contents: write   # necesario para crear/actualizar Releases
 
 jobs:
   build:
@@ -9,35 +17,37 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up JDK 17
+      - name: Set up JDK
         uses: actions/setup-java@v4
         with:
           distribution: temurin
-          java-version: 17
+          java-version: '17'
 
-      - name: Set up Android SDK
-        uses: android-actions/setup-android@v3
+      - name: Prepare Gradle wrapper (8.7)
+        run: |
+          gradle wrapper --gradle-version 8.7 --distribution-type all
+
+      - name: Assemble Debug APK
+        run: |
+          ./gradlew :app:assembleDebug
+
+      # 1) Artefacto descargable desde la ejecución
+      - name: Upload artifact (APK)
+        uses: actions/upload-artifact@v4
         with:
-          api-level: 34
-          build-tools: "34.0.0"
+          name: FreyjaBeta-debug-apk
+          path: app/build/outputs/apk/debug/*.apk
+          if-no-files-found: error
+          retention-days: 7
 
-      - name: Build Release (unsigned)
-        run: ./gradlew :app:assembleRelease
-
-      - name: Sign APK
-        uses: r0adkll/sign-android-release@v1
-        with:
-          releaseDirectory: app/build/outputs/apk/release
-          signingKeyBase64: ${{ secrets.SIGNING_KEY }}
-          alias: freyja
-          keyStorePassword: ${{ secrets.KEYSTORE_PASSWORD }}
-          keyPassword: ${{ secrets.KEY_PASSWORD }}
-
-      - name: Publish GitHub Release
+      # 2) Publicar en Releases con un tag basado en el número de corrida
+      - name: Create/Update GitHub Release
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: v0.9-${{ github.run_number }}
-          name: "Freyja Beta v0.9 — Build ${{ github.run_number }}"
-          files: app/build/outputs/apk/release/*signed.apk
+          tag_name: v0.9.${{ github.run_number }}
+          name: Freyja Beta v0.9.${{ github.run_number }}
+          draft: false
+          prerelease: true
+          files: app/build/outputs/apk/debug/*.apk
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
