--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,20 +1,44 @@
 name: Build Freyja Beta
 on:
   workflow_dispatch:
-  push: { branches: [ main ] }
+
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
-        with: { distribution: temurin, java-version: 17 }
-      - uses: android-actions/setup-android@v3
-        with: { api-level: 34, build-tools: "34.0.0" }
-      - run: gradle wrapper --gradle-version 8.7 --distribution-type all
-      - run: ./gradlew :app:assembleDebug
-      - uses: actions/upload-artifact@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
         with:
-          name: Freyja-Beta-0.9-debug
-          path: app/build/outputs/apk/debug/*.apk
-          if-no-files-found: error
+          distribution: temurin
+          java-version: '17'
+          cache: gradle
+
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
+
+      # Si NO subes keystore, compila Debug; si subes secretos, compila Release firmado
+      - name: Build (Debug or Release)
+        run: |
+          if [ -n "${{ secrets.KEYSTORE_BASE64 }}" ]; then
+            echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 -d > freyja.keystore
+            ./gradlew assembleRelease \
+              -Pandroid.injected.signing.store.file=freyja.keystore \
+              -Pandroid.injected.signing.store.password="${{ secrets.KEYSTORE_PASSWORD }}" \
+              -Pandroid.injected.signing.key.alias="${{ secrets.KEY_ALIAS }}" \
+              -Pandroid.injected.signing.key.password="${{ secrets.KEY_PASSWORD }}"
+          else
+            ./gradlew assembleDebug --no-daemon
+          fi
+
+      - name: Upload APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: Freyja-APK
+          path: |
+            app/build/outputs/apk/debug/*.apk
+            app/build/outputs/apk/release/*.apk
+          if-no-files-found: warn
