--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -31,8 +31,8 @@ jobs:
       - name: Make gradlew executable
         run: chmod +x gradlew
 
-      - name: Build debug APK
-        run: ./gradlew --no-daemon assembleDebug
+      - name: Build debug APK (verbose)
+        run: ./gradlew --no-daemon -i -s compileDebugKotlin
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
