--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -15,13 +15,15 @@ jobs:
           distribution: temurin
           java-version: '17'
 
-      - name: Set up Android SDK
-        uses: android-actions/setup-android@v3
-        with:
-          api-level: 34
-          build-tools: "34.0.0"
-          ndk: 25.1.8937393
-
+- name: Set up Android SDK
+  uses: android-actions/setup-android@v3
+  with:
+    cmdline-tools: latest
+    packages: |
+      platforms;android-34
+      build-tools;34.0.0
+      platform-tools
+      ndk;25.1.8937393
       - name: Configure Gradle
         uses: gradle/actions/setup-gradle@v3
 
