--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -1,43 +1,91 @@
 name: Build & Release APK
+
 on:
   workflow_dispatch:
   push:
     branches: [ "main" ]
+    tags:
+      - 'v*'   # al hacer push de un tag v*, publica un Release
+
+permissions:
+  contents: write  # para crear Releases
+
+concurrency:
+  group: build-release-${{ github.ref }}
+  cancel-in-progress: false
 
 jobs:
   build:
     runs-on: ubuntu-22.04
-    steps:
-      - uses: actions/checkout@v4
 
-      - uses: actions/setup-java@v4
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Java 17
+        uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: '17'
 
-- name: Set up Android SDK
-  uses: android-actions/setup-android@v3
-  with:
-    cmdline-tools: latest
-    packages: |
-      platforms;android-34
-      build-tools;34.0.0
-      platform-tools
-      ndk;25.1.8937393
+      - name: Set up Android SDK
+        uses: android-actions/setup-android@v3
+        with:
+          cmdline-tools: latest
+          packages: |
+            platforms;android-34
+            build-tools;34.0.0
+            platform-tools
+            ndk;25.1.8937393
+
       - name: Configure Gradle
         uses: gradle/actions/setup-gradle@v3
 
-      - name: Create local.properties
+      - name: Write local.properties
         run: echo "sdk.dir=$ANDROID_SDK_ROOT" > local.properties
 
       - name: Make gradlew executable
         run: chmod +x gradlew
 
-      - name: Build debug APK (verbose)
-        run: ./gradlew --no-daemon -i -s :app:assembleDebug
+      # Keystore desde secrets -> archivo local y variable de entorno con la ruta
+      - name: Write keystore from secret
+        env:
+          ANDROID_KEYSTORE_B64: ${{ secrets.ANDROID_KEYSTORE_B64 }}
+        run: |
+          echo "$ANDROID_KEYSTORE_B64" | base64 -d > keystore.jks
+          echo "ANDROID_KEYSTORE_PATH=$PWD/keystore.jks" >> $GITHUB_ENV
 
-      - name: Upload APK
+      # Build de release firmado (APK y AAB)
+      - name: Assemble & Bundle release (signed)
+        env:
+          ANDROID_KEYSTORE_PASSWORD: ${{ secrets.ANDROID_KEYSTORE_PASSWORD }}
+          ANDROID_KEY_ALIAS: ${{ secrets.ANDROID_KEY_ALIAS }}
+          ANDROID_KEY_ALIAS_PASSWORD: ${{ secrets.ANDROID_KEY_ALIAS_PASSWORD }}
+        run: |
+          ./gradlew --no-daemon :app:assembleRelease :app:bundleRelease
+
+      # Artefactos siempre accesibles desde Actions
+      - name: Upload APK (release)
         uses: actions/upload-artifact@v4
         with:
-          name: app-debug.apk
-          path: app/build/outputs/apk/debug/app-debug.apk
+          name: app-release.apk
+          path: app/build/outputs/apk/release/app-release.apk
+
+      - name: Upload AAB (release)
+        uses: actions/upload-artifact@v4
+        with:
+          name: app-release.aab
+          path: app/build/outputs/bundle/release/app-release.aab
+
+      # Publica un Release solo si fue push de tag (v*)
+      - name: Create GitHub Release
+        if: startsWith(github.ref, 'refs/tags/')
+        uses: softprops/action-gh-release@v2
+        with:
+          name: FreyjaBeta ${{ github.ref_name }}
+          body: |
+            **FreyjaBeta** ${{ github.ref_name }}
+            - APK y AAB firmados generados automáticamente.
+          files: |
+            app/build/outputs/apk/release/app-release.apk
+            app/build/outputs/bundle/release/app-release.aab
