--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -20,7 +20,6 @@ jobs:
           java-version: '17'
           cache: gradle
 
-      # ✅ Usa inputs explícitos en lugar de 'packages'
       - name: Set up Android SDK
         uses: android-actions/setup-android@v3
         with:
@@ -46,6 +45,7 @@ jobs:
           path: app/build/outputs/apk/debug/*.apk
           if-no-files-found: error
 
+      # Opcional: crear Release con el APK
       - name: Create GitHub Release (optional)
         if: github.ref == 'refs/heads/main'
         uses: softprops/action-gh-release@v2
