--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -55,3 +55,16 @@ jobs:
           files: app/build/outputs/apk/debug/*.apk
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+- name: Create GitHub Release
+        if: github.ref == 'refs/heads/main'
+        uses: softprops/action-gh-release@v2
+        with:
+          token: ${{ secrets.RELEASE_TOKEN }}
+          tag_name: build-${{ github.run_number }}.${{ github.run_attempt }}
+          name: "Release build ${{ github.run_number }} (attempt ${{ github.run_attempt }})"
+          make_latest: true
+          generate_release_notes: true
+          files: |
+            app/build/outputs/apk/debug/*.apk
+            app/build/outputs/apk/release/*.apk
