--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -68,22 +68,16 @@ jobs:
           path: app/build/outputs/apk/release/*.apk
           if-no-files-found: error
 
-      # Publicar Release en GitHub con ambos APKs
+      # Publicar Release en GitHub con ambos APKs (requiere RELEASE_TOKEN clásico con repo:*)
       - name: Create GitHub Release
         if: github.ref == 'refs/heads/main'
         uses: softprops/action-gh-release@v2
         with:
           token: ${{ secrets.RELEASE_TOKEN }}
           tag_name: build-${{ github.run_number }}.${{ github.run_attempt }}
-          name: "Release build ${{
-            github.run_number }} (attempt ${{ github.run_attempt }})"
+          name: "Release build ${{ github.run_number }} (attempt ${{ github.run_attempt }})"
           make_latest: true
           generate_release_notes: true
           files: |
             app/build/outputs/apk/debug/*.apk
             app/build/outputs/apk/release/*.apk
-
-- name: Decode keystore from secret
-  run: |
-    printf '%s' "${{ secrets.ANDROID_KEYSTORE_BASE64 }}" | base64 --decode > release.keystore
-    echo "ANDROID_KEYSTORE_PATH=$PWD/release.keystore" >> $GITHUB_ENV
