--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,14 @@
-org.gradle.jvmargs=-Xmx4g -Dfile.encoding=UTF-8
+# ⚡ Configuración Gradle
+org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
+org.gradle.daemon=false
+
+# AndroidX y Kotlin
 android.useAndroidX=true
 android.nonTransitiveRClass=true
 kotlin.code.style=official
 
-org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
-org.gradle.daemon=false
-
-org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
-org.gradle.daemon=false
-
-org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
-org.gradle.daemon=false
+# 🔑 Configuración de firma para Freyja
+RELEASE_STORE_FILE=freyja-release.p12
+RELEASE_STORE_PASSWORD=Sh@pup1wra1226
+RELEASE_KEY_ALIAS=freyja
+RELEASE_KEY_PASSWORD=Sh@pup1wra1226
