Actualizar gradle.properties

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,10 @@
-# ⚡ Configuración Gradle
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 org.gradle.daemon=false
-
-# AndroidX y Kotlin
 android.useAndroidX=true
 android.nonTransitiveRClass=true
 kotlin.code.style=official
 
-# 🔑 Configuración de firma para Freyja
+# Estos 4 los pisa el job "Inject signing props" en el runner.
 RELEASE_STORE_FILE=freyja-release.p12
 RELEASE_STORE_PASSWORD=Sh@pup1wra1226
 RELEASE_KEY_ALIAS=freyja
