--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -11,6 +11,7 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-22.04
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -36,7 +37,6 @@ jobs:
       - name: Create local.properties (point SDK)
         run: echo "sdk.dir=$ANDROID_SDK_ROOT" > local.properties
 
-      # 🔑 Decodifica keystore a app/
       - name: Decode keystore
         run: |
           mkdir -p app
@@ -44,30 +44,21 @@ jobs:
           | tr -d '\r\n[:space:]' \
           | base64 -d > app/freyja-release.p12
 
-      # 🏗️ Build release firmado
-      - name: Build release APK (signed)
+      - name: Inject signing props
         run: |
-          ./gradlew --no-daemon :app:assembleRelease \
-            -Pandroid.injected.signing.store.file=app/freyja-release.p12 \
-            -Pandroid.injected.signing.store.password="${{ secrets.ANDROID_KEYSTORE_PASSWORD }}" \
-            -Pandroid.injected.signing.key.alias="${{ secrets.ANDROID_KEY_ALIAS }}" \
-            -Pandroid.injected.signing.key.password="${{ secrets.ANDROID_KEY_PASSWORD }}"
+          {
+            echo "RELEASE_STORE_FILE=app/freyja-release.p12"
+            echo "RELEASE_STORE_PASSWORD=${{ secrets.ANDROID_KEYSTORE_PASSWORD }}"
+            echo "RELEASE_KEY_ALIAS=${{ secrets.ANDROID_KEY_ALIAS }}"
+            echo "RELEASE_KEY_PASSWORD=${{ secrets.ANDROID_KEY_PASSWORD }}"
+          } >> gradle.properties
 
-      # 📦 Sube el APK firmado
+      - name: Build release APK (signed)
+        run: ./gradlew --no-daemon :app:assembleRelease
+
       - name: Upload signed APK
         uses: actions/upload-artifact@v4
         with:
           name: app-release-signed
           path: app/build/outputs/apk/release/*.apk
           if-no-files-found: error
-
-      # 🎁 (opcional) Release en GitHub
-      - name: Create GitHub Release
-        if: github.ref == 'refs/heads/main'
-        uses: softprops/action-gh-release@v2
-        with:
-          tag_name: build-${{ github.run_number }}.${{ github.run_attempt }}
-          name: "Freyja Release ${{ github.run_number }}"
-          make_latest: true
-          generate_release_notes: true
-          files: app/build/outputs/apk/release/*.apk
