--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,8 @@ RELEASE_STORE_FILE=freyja-release.p12
 RELEASE_STORE_PASSWORD=Sh@pup1wra1226
 RELEASE_KEY_ALIAS=freyja
 RELEASE_KEY_PASSWORD=Sh@pup1wra1226
+org.gradle.jvmargs=-Xmx4g -Dfile.encoding=UTF-8
+android.useAndroidX=true
+android.enableJetifier=true
+kotlin.code.style=official
+android.nonTransitiveRClass=true
