--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.kingbrutblarg.freyjabeta">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!-- Visibilidad para Termux (Android 11+) -->
     <queries>
         <package android:name="com.termux" />
     </queries>
 
-    <!-- Permisos -->
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
